# DEMO

./: .gitignore  CMakeLists.txt
cmake/: BundleUtils.cmake  FetchCppMicroServices.cmake  FetchHttpLib.cmake  FetchImGui.cmake  FetchKDDockWidgets.cmake  FetchNFD.cmake
greeting_consumer/: CMakeLists.txt
greeting_consumer/src/: ConsumerActivator.cpp
greeting_provider/: CMakeLists.txt
greeting_provider/include/demo/: GreetingActivator.h
greeting_provider/src/: GreetingActivator.cpp
host/: BundleManagerDockWidget.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  PluginBundleTableModel.h  TaskServiceActionDelegate.cpp  TaskServiceDockWidget.cpp  main.cpp  thread.hpp
host/bundle/: BundleManagerDockWidget.cpp  PluginBundleActionDelegate.h
host/imgui/: imgui_impl_qt.cpp  imgui_impl_qt_opengl3.cpp  imgui_impl_qt_opengl3.h
host/log/: LogServiceImpl.h  LogWidget.h
host/task/: TaskServiceConfigDialog.cpp  TaskServiceConfigDialog.h  TaskServiceTableModel.cpp  TaskServiceTableModel.h
service_interface/: CMakeLists.txt
service_interface/include/demo/: IGreetingService.h  IWidgetService.h
src/bundles/: CMakeLists.txt
src/bundles/ai_agent/: Activator.cpp  CMakeLists.txt  Config.cpp  Config.h  DetectPanel.cpp  DetectPanel.h  Service.cpp  Service.h  manifest.json  trust_mode.cpp  trust_mode.h
src/bundles/ai_agent/src/: Service.cpp  Service.h
src/bundles/greeting_consumer/: CMakeLists.txt
src/bundles/greeting_consumer/src/: ConsumerActivator.cpp
src/bundles/greeting_provider/: CMakeLists.txt  manifest.json
src/bundles/greeting_provider/include/demo/: GreetingActivator.h
src/bundles/greeting_provider/src/: GreetingActivator.cpp
src/bundles/juki_aoi/: AOIEvent.cpp  AOIEvent.h  Activator.cpp  CMakeLists.txt  Config.cpp  Config.h  Panel.cpp  Panel.h  Service.cpp  Service.h  manifest.json
src/bundles/juki_aoi/src/: Activator.cpp  Service.cpp  Service.h
src/bundles/task_service_manager/: CMakeLists.txt  TaskServiceManager.cpp  TaskServiceManager.h  TaskServiceManagerActivator.cpp  manifest.json  thread.hpp
src/bundles/ui_consumer/: CMakeLists.txt
src/bundles/ui_consumer/src/: ConsumerActivator.cpp
src/common/: CMakeLists.txt
src/common/include/common/: Logger.h  SafeFile.h  base64.h  misc.h  safe_file.h
src/common/include/common/coro/: sleep.hpp  ticker.h  use_awaitable.hpp
src/common/src/: Logger.cpp  SafeFile.cpp  base64.cpp  misc.cpp  safe_file.cpp
src/common/src/coro/: ticker.cpp
src/greeting_consumer/: manifest.json
src/host/: MainWindow.cpp  main.cpp
src/host/bundle/: PluginBundleActionDelegate.cpp
src/host/log/: LogServiceActivator.cpp  LogServiceActivator.h  LogServiceImpl.cpp  LogWidget.cpp
src/host/task/: TaskServiceActionDelegate.h  TaskServiceDockWidget.h
src/imgui_extend/: CMakeLists.txt
src/imgui_extend/include/imgui_extend/: QtImGui.h  basic_config.h  component.h  export.h  imgui_impl_qt.h  imgui_impl_qt_opengl3.h  imguial_msgbox.h  imguial_term.h  table_view.h
src/imgui_extend/src/: FileDialogImpl.cpp  FileDialogImpl.h  ImGuiFileDialogConfig.h  ImGuiRenderer.cpp  ImGuiRenderer.h  QtImGui.cpp  basic_config.cpp  component.cpp  imgui_impl_qt.cpp  imgui_impl_qt_opengl3.cpp  imguial_msgbox.cpp  imguial_term.cpp  table_view.cpp  textselect.cpp
src/launcher/: CMakeLists.txt  ImguiWidget.cpp  ImguiWidget.h  MainImGuiWidget.cpp  MainImGuiWidget.h  MainWindow.cpp  MainWindow.h  QtImGui.cpp  QtImGui.h  main.cpp
src/launcher/BundleManager/: BundleManagerDockWidget.cpp  BundleManagerDockWidget.h  PluginBundleActionDelegate.cpp  PluginBundleActionDelegate.h  PluginBundleTableModel.cpp  PluginBundleTableModel.h
src/launcher/LogService/: LogServiceActivator.cpp  LogServiceActivator.h  LogServiceImpl.cpp  LogServiceImpl.h  LogWidget.cpp  LogWidget.h  imguial_term.cpp  imguial_term.h
src/launcher/TaskServiceManager/: ImguiWidget.cpp  ImguiWidget.h  TaskServiceActionDelegate.cpp  TaskServiceActionDelegate.h  TaskServiceConfigDialog.cpp  TaskServiceConfigDialog.h  TaskServiceDockWidget.cpp  TaskServiceDockWidget.h  TaskServiceTableModel.cpp  TaskServiceTableModel.h
src/launcher/bundle/: BundleManagerDockWidget.cpp  BundleManagerDockWidget.h  PluginBundleTableModel.cpp  PluginBundleTableModel.h
src/launcher/imgui/: ImguiWidget.cpp  QImguiWidget.cpp  QImguiWidget.h  imgui_impl_qt.h  imgui_impl_qt_opengl3.h
src/launcher/log/: LogServiceImpl.cpp  LogServiceImpl.h
src/launcher/task/: TaskServiceConfigDialog.cpp  TaskServiceConfigDialog.h  TaskServiceDockWidget.cpp  TaskServiceDockWidget.h  TaskServiceTableModel.cpp  TaskServiceTableModel.h
src/service/: CMakeLists.txt
src/service/include/service/: IAIAgentService.h  IGreetingService.h  ITaskService.h  ITaskServiceManager.h  IUIService.h  IWidgetService.h
src/service/service_interface/include/demo/: IGreetingService.h  IWidgetService.h
src/ui_consumer/: manifest.json
src/ui_consumer/src/: ConsumerActivator.cpp
translations/: app_zh_CN.qm  app_zh_CN.ts
ui_consumer/: CMakeLists.txt
ui_consumer/src/: ConsumerActivator.cpp
